--- a/website/pages/index.html
+++ b/website/pages/index.html
@@ -6,7 +6,9 @@
 </head>
 
 <body>
-  <h1>The main page of the website</h1>
+  <h1>RoomMe</h1>
+  <h2>Where would you like to have your vacation?</h2>
+  <div id="citiesDiv"></div>
 </body>
 
 </html>
