--- a/website/pages/city.html
+++ b/website/pages/city.html
@@ -3,19 +3,19 @@
 
 <head>
   <link rel="stylesheet" href="../styles/general.css">
-  <link rel="stylesheet" href="index.css">
-  <title>Index Page</title>
+  <link rel="stylesheet" href="city.css">
+  <title>City</title>
 </head>
 
 <body>
   <iframe id="headerIframe" src="header.html"></iframe>
 
   <div class="container">
-    <h2>Where would you like to have your vacation?</h2>
-    <div id="citiesDiv"></div>
+    <h2>Find your next stay</h2>
+    <div id="hotelsDiv"></div>
   </div>
 
-  <script type="module" src="index.js"></script>
+  <script type="module" src="city.js"></script>
 </body>
 
 </html>
