--- a/website/pages/reservations.html
+++ b/website/pages/reservations.html
@@ -3,7 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="../styles/general.css">
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="reservations.css">
   <title>Index Page</title>
 </head>
 
@@ -11,11 +11,11 @@
   <iframe id="headerIframe" src="header.html"></iframe>
 
   <div class="container">
-    <h2>Where would you like to have your vacation?</h2>
-    <div id="citiesDiv"></div>
+    <h2>My Reservations</h2>
+    <div id="reservationsDiv"></div>
   </div>
 
-  <script type="module" src="index.js"></script>
+  <script type="module" src="reservations.js"></script>
 </body>
 
 </html>
