added a pretty picture

--- a/website/pages/hotel.html
+++ b/website/pages/hotel.html
@@ -3,6 +3,7 @@
 
 <head>
   <link rel="stylesheet" href="../styles/general.css">
+  <link rel="stylesheet" href="hotel.css">
 </head>
 
 <body>
@@ -14,6 +15,11 @@
     <label>Reserve a room for </label>
     <input type="date" id="reservationInput">
     <button id="reservationButton" disabled>Reserve</button>
+
+    <br />
+    <br />
+
+    <img id="hotelImg">
 
     <br />
     <br />
